fix(style): sidebar spacing

--- a/frappe/public/less/sidebar.less
+++ b/frappe/public/less/sidebar.less
@@ -66,7 +66,7 @@ body[data-route^="Module"] .main-menu {
 	}
 
 	.sidebar-menu {
-		padding: 2px 0px 5px 0px;
+		padding: 15px 0px 5px 0px;
 		margin: 0px;
 	}
 }
@@ -320,6 +320,10 @@ body[data-route^="Module"] .main-menu {
 				li.divider {
 					height: 0;
 				}
+			}
+
+			.sidebar-menu {
+				padding: 2px 0px 5px 0px;
 			}
 		}
 
